@@ -52,6 +52,7 @@ class MainWindow : public QMainWindow, public Ui::MainWindow
 		virtual void on_mapStyleSaveAction_triggered();
 		virtual void on_mapStyleLoadAction_triggered();
 		virtual void on_toolsPreferencesAction_triggered();
+		virtual void on_exportOSMAction_triggered();
 
 	signals:
 		void remove_triggered();
